settings & recepies card

--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -1,6 +1,6 @@
 :root{
     --background-color:#fff;
-    --background-color:#fff;
+    --background-light:#fff;
     --shadow-color: rgba(0,0,0,0.2);
     --primary-color: rgb(255,0,86);
     --text-color: #0A0A0A;
@@ -21,9 +21,8 @@
 body{
     font-size: var(--font-size);
     font-family: "poppins", sans-serif;
-  font-weight: 400;
-  font-style: normal;
-  padding-top: 55px;
+    padding-top: 55px;
+    background-color: var(--background-light);
 }
 a{
     text-decoration: none;
@@ -55,6 +54,9 @@ img{
     flex-wrap: wrap;
     align-items: center;
     margin-bottom: 5vw;
+    &.d-block{
+        display: block;
+    }
     .title{
         color:var(--text-color);
         font-size: 3em;
@@ -78,52 +80,58 @@ img{
 @import "partials/chef-section.scss";
 @import "partials/previous-searches";
 
-.recepies-container{
-    display: grid;
-    grid-template-columns: repeat(auto-fit, minmax(20px, 1fr));
-    grid-gap: 1.5em; 
-
-}
-.recipe-card{
+.options-container{
+    box-shadow: 0 5px 10px var(--shadow-color);
+    padding: 1em;
     border-radius: 5px;
-    overflow: hidden;
-    box-shadow: 0 5px 15px var(--shadow-color);
-    .recipe-card-info{
-        padding:15px;
+    border-left: .5em solid var(--primary-color); 
+    background-color: var(--background-light);
+    margin-top: 1em;
+    display: flex;
+    gap: 1em;
+    .option{
+        height: 3.5em;
+        width: 3.5em;
+        box-shadow: 0 3px 6px var(--shadow-color);
+        border-radius: 5px;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        &.light{
+            background-color: #fff;
+        }
+        &.dark{
+            background-color: rgb(29, 29, 29);
+        }
+        .check{
+            height: 2.5em;
+            width: 2.5em;
+            background-color: var(--primary-color);
+            border-radius: 50%;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            box-shadow: 0 2px 5px var(--shadow-color);
+            svg{
+               height: 1.5em;
+               width: 1.5em;
+            }
+           
+        }
     }
-    .custom-images{
-        z-index: -1;
-    }
-    .chef-img{
-        height:60px;
-        width: 60px;
-        border-radius: 50%;
-        border: 1px solid var(--background-light);
-        box-shadow: 0 1px 3px var (--shadow-color);
-        margin-top: -50px;
-        z-index: 2;
-
-    }
-    .recipe-title{
-        font-size: 1.25em;
-        font-weight: bold;
-        margin-bottom: .5em;
-        color: var(--text-color);
-        margin-top: .25em;
-    }
-    .recipe-desc{
-        color: var(--text-light);
-        font-size: .9em;
-        letter-spacing: 1px;
-    }
-    .view-btn{
-        font-size: 1em;
-        font-weight: bold;
-        color: var(--primary-color);
+    .btn1 span{
         display: inline-block;
+        margin-left: .5em;
     }
+}
+
+.d-block  h2{
+     color: var(--text-color);
+     font-size: 1.50em;
+    
 }
 @import "partials/_footer.scss";
+@import "partials/recipe-card.scss";
 
 
  
@@ -137,19 +145,7 @@ img{
 
 
 
-.custom-images{
-    // background-color: red;
-    height:0;
-    width:100%;
-    position: relative;
-    img{
-        position:absolute;
-        top:0;
-        left:0;
-        height: 100%;
-        width: 100%;
-    }
-}
+
 
 @media screen and (max-width:1280px) {
     .container{
