--- a/src/styles/partials/_hero-section.scss
+++ b/src/styles/partials/_hero-section.scss
@@ -1,3 +1,17 @@
+.custom-images{
+    // background-color: red;
+    height:0;
+    width:100%;
+    position: relative;
+    img{
+        position:absolute;
+        top:0;
+        left:0;
+        height: 100%;
+        width: 100%;
+    }
+}
+
 .section.hero{
     .typography{
         padding-right: 1.5em;
