--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -140,10 +140,123 @@ img{
     padding-block: 2vw;
 }
 .container{
-    padding-inline: 22vw;
+    padding-inline: 17vw;
 }
 
-
+.container-login{
+    box-shadow: 1px 5px 8px var(--shadow-color);
+    border: 2px solid var(--primary-color);
+    background-image: url("/public/images/recepies/image_22.jpg");
+    mask-image: url("/public/images/chefs/chef_04.jpg");
+    background-size: cover;
+    border-radius: 5px;
+    width: 30em;
+    display: grid;
+    grid-template-columns: auto;
+    gap: 1.5em;
+    padding: 5rem;
+    .header{
+        display: flex;
+        justify-content: center;
+        color: var(--primary-color);
+        font-weight: bold;
+        font-size: 1.5em;
+    }
+    .email{
+        margin-top: 2.5rem;
+        width: 100%;
+        height: 2em;
+       display: grid;
+       grid-template-columns:repeat(2, 1fr);
+       .symbol-input100{
+        margin: 0 .5em;
+       font-size: 1.2em;
+       color:var(--primary-color);
+       }
+       .input100{
+        background: transparent;
+        width:24em;
+        border: none;
+        outline: none;
+        height:2.5em;
+        color: #fff;
+        font-weight: 500;
+        &::placeholder{
+            color: #fff;
+        }
+        &:hover{
+            border-bottom: 2px solid var(--primary-color);
+        }
+       }
+    }
+    .password{
+        margin-top: 2.5rem;
+        width: 100%;
+        height: 2em;
+        display: grid;
+       grid-template-columns:repeat(2, 1fr);
+       border-radius: 5px;
+       .symbol-input100{
+        margin: 0 .5em;
+       font-size: 1.2em;
+       color:var(--primary-color);
+       }
+       .input100{
+        color: #fff;
+        font-weight: 500;
+        background: transparent;
+        border: none;
+        outline: none;
+        width:24em;
+        height:2.5em;
+        &::placeholder{
+            color: #fff;
+        }
+        &:hover{
+            border-bottom: 2px solid var(--primary-color);
+        }
+       }
+}
+.name{
+    margin-top: 2.5rem;
+    width: 100%;
+    height: 2em;
+    display: grid;
+   grid-template-columns:repeat(2, 1fr);
+   border-radius: 5px;
+   .symbol-input100{
+    margin: 0 .5em;
+   font-size: 1.2em;
+   color:var(--primary-color);
+   }
+   .input100{
+    color: #fff;
+    font-weight: 500;
+    background: transparent;
+    border: none;
+    outline: none;
+    width:24em;
+    height:2.5em;
+    &::placeholder{
+        color: #fff;
+    }
+    &:hover{
+        border-bottom: 2px solid var(--primary-color);
+    }
+   }
+}
+.btn1{
+    margin-top: 2.5rem;
+    line-height: .5em;
+}
+.link{
+    margin-top: 1.5em;
+}
+.txt2{
+    color: var(--primary-color);
+    font-weight:500;
+}
+}
 
 
 
