--- a/src/styles/partials/_recipe-card.scss
+++ b/src/styles/partials/_recipe-card.scss
@@ -1,6 +1,6 @@
 .recepies-container{
     display: grid;
-    grid-template-columns: repeat(auto-fit, minmax(220px, 1fr));
+    grid-template-columns: repeat(auto-fit, minmax(232px, 1fr));
     grid-gap: 1.5em; 
 
 }
@@ -47,5 +47,6 @@
         border-radius: 3px;
         padding: 5px;
         display: inline-block;
+        cursor: pointer;
     }
 }
