--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -162,6 +162,7 @@ img{
         color: #ffffff;
         font-weight: bold;
         font-size: 1.5em;
+        letter-spacing: 1px;
         background-color: var(--primary-color);
         border-radius: 10px;
     }
@@ -270,7 +271,7 @@ img{
         margin-bottom: 0.9em;
         width: 6em;
         padding: .5em;
-        border-radius: 2px;
+        border-radius: 4px;
         font-size: 17px;
         text-transform: lowercase;
         .back-icon{
