--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -133,6 +133,9 @@ img{
 }
 @import "partials/_footer.scss";
 @import "partials/_recipe-card.scss";
+@import "partials/login-page.scss";
+@import "partials/recipe-details.scss";
+@import "partials/profile.scss";
 
 
  
@@ -144,254 +147,10 @@ img{
     padding-inline: 18vw;
 }
 
-.container-login{
-    box-shadow: 1px 5px 8px var(--shadow-color);
-    border: 2px solid var(--primary-color);
-    background-image: url("/public/images/recepies/image_22.jpg");
-    background-size: cover;
-    border-radius: 5px;
-    width: 30em;
-    display: grid;
-    // left: -5em;
-    grid-template-columns: repeat(1, 1fr);
-    gap: 10em;
-    padding: 4em;
-    .header{
-        display: flex;
-        justify-content: center;
-        color: #ffffff;
-        font-weight: bold;
-        font-size: 1.5em;
-        letter-spacing: 1px;
-        background-color: var(--primary-color);
-        border-radius: 10px;
-    }
-    .email{
-        margin-top: 2.5rem;
-        width: 100%;
-        height: 2em;
-       display: grid;
-       grid-template-columns:repeat(2, 1fr);
-       .symbol-input100{
-        margin: 0 .5em;
-       font-size: 1.2em;
-       color:var(--primary-color);
-       }
-       .input100{
-        background-color: transparent;
-        width:24em;
-        border: none;
-        outline: none;
-        height:2.5em;
-        font-weight: 500;
-        &::placeholder{
-            color: #fff;
-        }
-        &:hover{
-            border-bottom: 2px solid var(--primary-color);
-        }
-       }
-    }
-    .password{
-        margin-top: 2.5rem;
-        width: 100%;
-        height: 2em;
-        display: grid;
-       grid-template-columns:repeat(2, 1fr);
-       border-radius: 5px;
-       .symbol-input100{
-        margin: 0 .5em;
-       font-size: 1.2em;
-       color:var(--primary-color);
-       }
-       .input100{
-        color: #fff;
-        font-weight: 500;
-        background: transparent;
-        border: none;
-        outline: none;
-        width:24em;
-        height:2.5em;
-        &::placeholder{
-            color: #fff;
-        }
-        &:hover{
-            border-bottom: 2px solid var(--primary-color);
-        }
-       }
-}
-.name{
-    margin-top: 2.5rem;
-    width: 100%;
-    height: 2em;
-    display: grid;
-   grid-template-columns:repeat(2, 1fr);
-   border-radius: 5px;
-   .symbol-input100{
-    margin: 0 .5em;
-   font-size: 1.2em;
-   color:var(--primary-color);
-   }
-   .input100{
-    color: #fff;
-    font-weight: 500;
-    background: transparent;
-    border: none;
-    outline: none;
-    width:24em;
-    height:2.5em;
-    &::placeholder{
-        color: #fff;
-    }
-    &:hover{
-        border-bottom: 2px solid var(--primary-color);
-    }
-   }
-}
-.btn1{
-    margin-top: 2.5rem;
-    line-height: .5em;
-}
-.link{
-    margin-top: 1.5em;
-}
-.txt2{
-    color: var(--primary-color);
-    padding: .3em .5em;
-    font-weight:500;
-    font-size: .8em;
-    
-}
-}
 
-.recipe-container{
-    .btn1{
-        color: var(--background-light);
-        margin-top: -1em;
-        margin-bottom: 0.9em;
-        width: 3em;
-        padding: .5em;
-        border-radius: 4px;
-        font-size: 17px;
-        text-transform: lowercase;
-        .back-icon{
-            padding-right: .6em;
-            padding-left: .4em;
-        }
-    }
-    .recipe-name{
-        padding-right: 15em;
-        display: flex;
-        flex-grow: 1;
-        flex-basis: 200;
-       justify-content: end;
-       font-size: 30px;
-       color: #0A0A0A;
-       font-weight: 700;
-    }
-    .recipe-image{
-        img{
-            width: 60vw;
-            height: 17em;
-            z-index: -1;
-            border-radius: 5px;
-        }
-    }
-    .chef-image{
-        img{
-            margin-top:-5em;
-            margin-left: 2em;
-            width:9em;
-            height: 9em;
-            border-radius: 50%;
-            z-index: 2;
-            border: 3px solid whitesmoke;
-        }
-    }
-  .Procedures{
-    display: flex;
-    flex-wrap: wrap;
-    padding: 10px;
-    justify-content: space-evenly;
-    .ingredients{
-        span{
-            background-color: var(--primary-color);
-            color: #ffffff;
-            padding: 6px;
-            border-radius: 3px;
-            box-shadow: 1px 3px 6px var(--shadow-color);
-        }
-        .ingredient{
-                margin-top: 2em;
-                list-style-type: none;
-                color: var(--text-color);
-          }
-    }
-    .Instructions{
-        span{
-            background-color: var(--primary-color);
-            color: #ffffff;
-            padding: 6px;
-            border-radius: 3px;
-            box-shadow: 1px 3px 6px var(--shadow-color);
-        }
-        .instruction{
-                list-style-type: none;
-                margin-top: 2em;
-                .fa{
-                    margin-right: 10px;
-                    color: var(--primary-color);
-                }
-          }
-    }
-   
-    
-  }
- 
-}
 
-.profile-container{
-    box-shadow: 3px 6px 12px var(--shadow-color);
-    background-image:url("/public/images/recepies/image_26.jpg") ;
-    border-radius: 5px;
-    object-fit: cover;
-    padding: 2rem;
-    display: flex;
-    flex-wrap: wrap;
-    flex-direction: column;
-    height: 28rem;
-    .title{
-        color: #fff;
-        text-align: center;
-        margin-bottom: 1rem;
-        font-weight: 450;
-    }
-    .image{
-        display: flex;
-        justify-content: center;
-        img{
-            height: 9.5rem;
-            width: 9.5rem;
-            border-radius: 50%;
-            margin-bottom: 1.5rem;
-        }
-    }
-    .details{
-        .name{
-            color: #fff;
-            font-weight: 400;
-            padding: .8rem;
-        }
-        .email{
-            color: #fff;
-            font-weight: 400;
-            padding: .8rem;
-        }
-    }
-    .logout{
-        margin-top: .5em;
-    }
-}
+
+
 .addrecipe{
     margin-left: -10em;
     display: flex;
@@ -399,44 +158,82 @@ img{
     flex-direction: row;
     padding: 1em;
     box-shadow: 3px 6px 12px var(--shadow-color);
-    background-image:url("/public/images/recepies/image_16.jpg") ;
+    background-image:url("/public/images/recepies/image_27.jpg") ;
     width: 48vw;
     border-radius: 5px;
-    object-fit: cover;
-    height: 35em;
-    form{
-        padding: 2rem;
+    height: 65em;
+    .error{
+        color: var(--primary-color);
+        font-size: 15px;
+    }
+    .title{
         display: flex;
-        flex-wrap: wrap;
-    flex-direction: row;
+        flex-direction: row;
+        justify-content: center;
+        padding-top: 1em;
+        color: var(--primary-color);
+        width:100%;
+        text-align: center;
+        border-radius: 5px ;
+        box-sizing: 0;
+        svg{
+            padding-left: 5px;
+            font-size: 25px;
+        }
+    }
+    form{
+        padding: 1em 1em 1.5em 1em;
+        display: grid;
+        grid-template-columns: repeat(autofill, minmax(170px, 1fr));
         label{
             font-weight: 500; 
-            margin-top: 1em;
+            margin-top: .5em;
             color: var(--primary-color);
           }
           input{
-              width: 38em;
-              height: 2.5em;
-              padding-top: 1em;
-              margin-left: 1em;
-              margin-top: 1em;
-              border: none;
+              width: 50em;
+              background-color: #ffffff49;
+              height: 3em;
+              padding-top: .5em;
+              margin-top: .5em;
+              border: 1px solid var(--primary-color);
               border-radius: 5px;
+              color: #fff;
+          }
+          .file{
+            width:34.9em;
+            padding: 1em;
+            border: 1px solid var(--primary-color);
+            font-size: 120%;
+            text-transform: lowercase;
+            height: 5em;
+            color: #fff;
+          }
+          ::file-selector-button {
+            background-color:var(--primary-color);
+            color: white;
+            border: 1px solid var(--primary-color);
+            border-radius: 5px;
+            padding: 1rem 3rem;
           }
           textarea{
-            width: 38em;
-            border: none;
-            margin-left: 1em;
-            margin-top: 1em;
+            border: 1px solid var(--primary-color);
+            background-color: #ffffff49;
+            width: 50em;
+            margin-top: .5em;
               border-radius: 5px;
+              color: #fff;
           }
             .add{
-                margin-top: 2em;
+                margin-top: 2.5em;
                 width: 100%;
                 font-size: 25px;
-                padding: .2em 10em .2em 10em;
+                padding: .5em 0 0.5em 0;
+                display: flex;
+                justify-content: center;
                 svg{
-                  font-size: 25px;
+                    padding-left: 5px;
+                    font-size: 25px;
                 }
             }        
     }
