--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -185,45 +185,50 @@ img{
         padding: 1em 1em 1.5em 1em;
         display: grid;
         grid-template-columns: repeat(autofill, minmax(170px, 1fr));
-        label{
-            font-weight: 500; 
-            margin-top: .5em;
-            color: var(--primary-color);
+        .fields{
+            display: grid;
+            grid-template-rows: repeat(autofill, minmax(170px, 1fr));;
+            label{
+                font-weight: 500; 
+                margin-top: .5em;
+                color: var(--primary-color);
+              }
+              input{
+                //   width: 100%;
+                  background-color: #ffffff31;
+                  height: 3em;
+                  padding-top: .5em;
+                  margin-top: .5em;
+                  border: 1px solid var(--primary-color);
+                  border-radius: 5px;
+                  color: #fff;
+              }
+              .file{
+                width:34.9em;
+                padding: 1em;
+                border: 1px solid var(--primary-color);
+                font-size: 120%;
+                text-transform: lowercase;
+                height: 5em;
+                color: #fff;
+              }
+              ::file-selector-button {
+                background-color:var(--primary-color);
+                color: white;
+                border: 1px solid var(--primary-color);
+                border-radius: 5px;
+                padding: 1rem 3rem;
+              }
+              textarea{
+                border: 1px solid var(--primary-color);
+                background-color: #ffffff49;
+                width: 50em;
+                margin-top: .5em;
+                  border-radius: 5px;
+                  color: #fff;
+              }
           }
-          input{
-              width: 50em;
-              background-color: #ffffff49;
-              height: 3em;
-              padding-top: .5em;
-              margin-top: .5em;
-              border: 1px solid var(--primary-color);
-              border-radius: 5px;
-              color: #fff;
-          }
-          .file{
-            width:34.9em;
-            padding: 1em;
-            border: 1px solid var(--primary-color);
-            font-size: 120%;
-            text-transform: lowercase;
-            height: 5em;
-            color: #fff;
-          }
-          ::file-selector-button {
-            background-color:var(--primary-color);
-            color: white;
-            border: 1px solid var(--primary-color);
-            border-radius: 5px;
-            padding: 1rem 3rem;
-          }
-          textarea{
-            border: 1px solid var(--primary-color);
-            background-color: #ffffff49;
-            width: 50em;
-            margin-top: .5em;
-              border-radius: 5px;
-              color: #fff;
-          }
+     
             .add{
                 margin-top: 2.5em;
                 width: 100%;
@@ -243,13 +248,297 @@ img{
     .container{
         padding-inline: 18vw;
     }
+    .addrecipe{
+        width: 60vw;
+        margin-left: -10em;
+    display: flex;
+    flex-wrap: wrap;
+    flex-direction: row;
+    form{
+        padding: 1em 1em 1.5em 1em;
+        display: grid;
+        grid-template-columns: repeat(autofill, minmax(170px, 1fr));
+        .fields{
+            display: grid;
+            grid-template-rows: repeat(autofill, minmax(170px, 1fr));;
+            label{
+                font-weight: 500; 
+                margin-top: .5em;
+                color: var(--primary-color);
+              }
+              input{
+                //   width: 100%;
+                  background-color: #ffffff31;
+                  height: 3em;
+                  padding-top: .5em;
+                  margin-top: .5em;
+                  border: 1px solid var(--primary-color);
+                  border-radius: 5px;
+                  color: #fff;
+              }
+              .file{
+                width:34.9em;
+                padding: 1em;
+                border: 1px solid var(--primary-color);
+                font-size: 120%;
+                text-transform: lowercase;
+                height: 5em;
+                color: #fff;
+              }
+              ::file-selector-button {
+                background-color:var(--primary-color);
+                color: white;
+                border: 1px solid var(--primary-color);
+                border-radius: 5px;
+                padding: 1rem 3rem;
+              }
+              textarea{
+                border: 1px solid var(--primary-color);
+                background-color: #ffffff49;
+                width: 50em;
+                margin-top: .5em;
+                  border-radius: 5px;
+                  color: #fff;
+              }
+          }
+     
+            .add{
+                margin-top: 2.5em;
+                width: 100%;
+                font-size: 25px;
+                padding: .5em 0 0.5em 0;
+                display: flex;
+                justify-content: center;
+                svg{
+                    padding-left: 5px;
+                    font-size: 25px;
+                }
+            }        
+    }
+    }
+}
+@media screen and (max-width:1200px) {
+    .container{
+        padding-inline: 14vw;
+    }
+    .addrecipe{
+        width: 60vw;
+        margin-left: -10em;
+    display: flex;
+    flex-wrap: wrap;
+    flex-direction: row;
+    form{
+        padding: 1em 1em 1.5em 1em;
+        display: grid;
+        grid-template-columns: repeat(autofill, minmax(155px, 1fr));
+        .fields{
+            display: grid;
+            grid-template-rows: repeat(autofill, minmax(155px, 1fr));;
+            label{
+                font-weight: 500; 
+                margin-top: .5em;
+                color: var(--primary-color);
+              }
+              input{
+                //   width: 100%;
+                  background-color: #ffffff31;
+                  height: 3em;
+                  padding-top: .5em;
+                  margin-top: .5em;
+                  border: 1px solid var(--primary-color);
+                  border-radius: 5px;
+                  color: #fff;
+              }
+              .file{
+                width:34.9em;
+                padding: 1em;
+                border: 1px solid var(--primary-color);
+                font-size: 120%;
+                text-transform: lowercase;
+                height: 5em;
+                color: #fff;
+              }
+              ::file-selector-button {
+                background-color:var(--primary-color);
+                color: white;
+                border: 1px solid var(--primary-color);
+                border-radius: 5px;
+                padding: 1rem 3rem;
+              }
+              textarea{
+                border: 1px solid var(--primary-color);
+                background-color: #ffffff49;
+                width: 50em;
+                margin-top: .5em;
+                  border-radius: 5px;
+                  color: #fff;
+              }
+          }
+     
+            .add{
+                margin-top: 2.5em;
+                width: 100%;
+                font-size: 25px;
+                padding: .5em 0 0.5em 0;
+                display: flex;
+                justify-content: center;
+                svg{
+                    padding-left: 5px;
+                    font-size: 25px;
+                }
+            }        
+    }
+    }
+}
+@media screen and (max-width:1320px) {
+    .container{
+        padding-inline: 18vw;
+    }
+    .addrecipe{
+        width: 60vw;
+        margin-left: -10em;
+    display: flex;
+    flex-wrap: wrap;
+    flex-direction: row;
+    form{
+        padding: 1em 1em 1.5em 1em;
+        display: grid;
+        grid-template-columns: repeat(autofill, minmax(160px, 1fr));
+        .fields{
+            display: grid;
+            grid-template-rows: repeat(autofill, minmax(170px, 1fr));;
+            label{
+                font-weight: 500; 
+                margin-top: .5em;
+                color: var(--primary-color);
+              }
+              input{
+                //   width: 100%;
+                  background-color: #ffffff31;
+                  height: 3em;
+                  padding-top: .5em;
+                  margin-top: .5em;
+                  border: 1px solid var(--primary-color);
+                  border-radius: 5px;
+                  color: #fff;
+              }
+              .file{
+                width:34.9em;
+                padding: 1em;
+                border: 1px solid var(--primary-color);
+                font-size: 120%;
+                text-transform: lowercase;
+                height: 5em;
+                color: #fff;
+              }
+              ::file-selector-button {
+                background-color:var(--primary-color);
+                color: white;
+                border: 1px solid var(--primary-color);
+                border-radius: 5px;
+                padding: 1rem 3rem;
+              }
+              textarea{
+                border: 1px solid var(--primary-color);
+                background-color: #ffffff49;
+                width: 50em;
+                margin-top: .5em;
+                  border-radius: 5px;
+                  color: #fff;
+              }
+          }
+     
+            .add{
+                margin-top: 2.5em;
+                width: 100%;
+                font-size: 25px;
+                padding: .5em 0 0.5em 0;
+                display: flex;
+                justify-content: center;
+                svg{
+                    padding-left: 5px;
+                    font-size: 25px;
+                }
+            }        
+    }
+    }
 }
 
 @media screen and (max-width:1050px) {
     .container{
         padding-inline: 12vw;
     }
+    .addrecipe{
+        width: 70vw;
+        margin-left: -10em;
+    display: flex;
+    flex-wrap: wrap;
+    flex-direction: row;
+    form{
+        padding: 1em 1em 1.5em 1em;
+        display: grid;
+        grid-template-columns: repeat(autofill, minmax(140px, 1fr));
+        .fields{
+            display: grid;
+            grid-template-rows: repeat(autofill, minmax(140px, 1fr));;
+            label{
+                font-weight: 500; 
+                margin-top: .5em;
+                color: var(--primary-color);
+              }
+              input{
+                //   width: 100%;
+                  background-color: #ffffff31;
+                  height: 3em;
+                  padding-top: .5em;
+                  margin-top: .5em;
+                  border: 1px solid var(--primary-color);
+                  border-radius: 5px;
+                  color: #fff;
+              }
+              .file{
+                width:34.9em;
+                padding: 1em;
+                border: 1px solid var(--primary-color);
+                font-size: 120%;
+                text-transform: lowercase;
+                height: 5em;
+                color: #fff;
+              }
+              ::file-selector-button {
+                background-color:var(--primary-color);
+                color: white;
+                border: 1px solid var(--primary-color);
+                border-radius: 5px;
+                padding: 1rem 3rem;
+              }
+              textarea{
+                border: 1px solid var(--primary-color);
+                background-color: #ffffff49;
+                width: 50em;
+                margin-top: .5em;
+                  border-radius: 5px;
+                  color: #fff;
+              }
+          }
+     
+            .add{
+                margin-top: 2.5em;
+                width: 100%;
+                font-size: 25px;
+                padding: .5em 0 0.5em 0;
+                display: flex;
+                justify-content: center;
+                svg{
+                    padding-left: 5px;
+                    font-size: 25px;
+                }
+            }        
+    }
+    }
+    
 }
+
 
 @media screen and (max-width:768px) {
     .nav-bar{
@@ -268,7 +557,103 @@ img{
             margin-bottom: 2em;
         }
     }
-
+    .recipe-container{
+      .recipe-name{
+        padding-right: 10em;
+        display: flex;
+        flex-grow: 1;
+        flex-basis: 200;
+       justify-content: end;
+       font-size: 25px;
+      }
+      .recipe-image{
+        img{
+            width: 87vw;
+            height: 17em;
+            z-index: -1;
+            border-radius: 5px;
+        }
+      }
+      .chef-image{
+        img{
+            margin-top:-5em;
+            margin-left: 2em;
+            width:7em;
+            height: 7em;
+            border-radius: 50%;
+            z-index: 2;
+            border: 3px solid whitesmoke;
+        }
+      }
+    }
+    .addrecipe{
+        width: 80vw;
+        margin-left: -3em;
+    display: flex;
+    flex-wrap: wrap;
+    flex-direction: row;
+    form{
+        padding: 1em 1em 1.5em 1em;
+        display: grid;
+        grid-template-columns: repeat(autofill, minmax(40px, 1fr));
+        .fields{
+            display: grid;
+            grid-template-rows: repeat(autofill, minmax(40px, 1fr));;
+            label{
+                font-weight: 500; 
+                margin-top: .5em;
+                color: var(--primary-color);
+              }
+              input{
+                  width:40em;
+                  background-color: #ffffff31;
+                  height: 3em;
+                  padding-top: .5em;
+                  margin-top: .5em;
+                  border: 1px solid var(--primary-color);
+                  border-radius: 5px;
+                  color: #fff;
+              }
+              .file{
+                width:27.9em;
+                padding: 1em;
+                border: 1px solid var(--primary-color);
+                font-size: 120%;
+                text-transform: lowercase;
+                height: 5em;
+                color: #fff;
+              }
+              ::file-selector-button {
+                background-color:var(--primary-color);
+                color: white;
+                border: 1px solid var(--primary-color);
+                border-radius: 5px;
+                padding: 1rem 3rem;
+              }
+              textarea{
+                border: 1px solid var(--primary-color);
+                background-color: #ffffff49;
+                width: 40em;
+                margin-top: .5em;
+                  border-radius: 5px;
+                  color: #fff;
+              }
+          }
+     
+            .add{
+                margin-top: 2.5em;
+                width: 100%;
+                font-size: 25px;
+                padding: .5em 0 0.5em 0;
+                display: flex;
+                justify-content: center;
+                svg{
+                    padding-left: 5px;
+                    font-size: 25px;
+                }
+            }        
+    }
+    }
     .skill-items{
      display: inline-block;
      margin: .75em;
@@ -366,6 +751,71 @@ img{
                         }
                     }
             }
+}
+.addrecipe{
+    width: 90vw;
+    margin-left: -.7em;
+display: flex;
+flex-wrap: wrap;
+flex-direction: row;
+form{
+    padding: 1em 1em 1.5em 1em;
+    display: grid;
+    grid-template-columns: repeat(autofill, minmax(40px, 1fr));
+    .fields{
+        display: grid;
+        grid-template-rows: repeat(autofill, minmax(40px, 1fr));;
+        label{
+            font-weight: 500; 
+            margin-top: .5em;
+            color: var(--primary-color);
+          }
+          input{
+              width:27em;
+              background-color: #ffffff31;
+              height: 3em;
+              padding-top: .5em;
+              margin-top: .5em;
+              border: 1px solid var(--primary-color);
+              border-radius: 5px;
+              color: #fff;
+          }
+          .file{
+            width:19em;
+            padding: 1em;
+            border: 1px solid var(--primary-color);
+            height:4em;
+          }
+          ::file-selector-button {
+            background-color:var(--primary-color);
+            color: white;
+            border: 1px solid var(--primary-color);
+            border-radius: 5px;
+            padding: .5rem 1.5rem;
+          }
+          textarea{
+            border: 1px solid var(--primary-color);
+            background-color: #ffffff49;
+            width: 27em;
+            margin-top: .5em;
+              border-radius: 5px;
+              color: #fff;
+          }
+      }
+ 
+        .add{
+            margin-top: 2.5em;
+            width: 100%;
+            font-size: 25px;
+            padding: .5em 0 0.5em 0;
+            display: flex;
+            justify-content: center;
+            svg{
+                padding-left: 5px;
+                font-size: 25px;
+            }
+        }        
+}
 }
         
 }
