--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -781,10 +781,11 @@ form{
               color: #fff;
           }
           .file{
-            width:19em;
+            width:25em;
             padding: 1em;
             border: 1px solid var(--primary-color);
             height:4em;
+            font-size: 90%;
           }
           ::file-selector-button {
             background-color:var(--primary-color);
@@ -818,4 +819,76 @@ form{
 }
 }
         
+}
+
+@media screen and (max-width:390px) {
+    .container{
+        padding-inline: 3vw;
+    }
+    .addrecipe{
+        width: 90vw;
+        margin-left: -.7em;
+    display: flex;
+    flex-wrap: wrap;
+    flex-direction: row;
+    form{
+        padding: 0 1em 1.5em 1em;
+        display: grid;
+        grid-template-columns: repeat(autofill, minmax(40px, 1fr));
+        .fields{
+            display: grid;
+            grid-template-rows: repeat(autofill, minmax(40px, 1fr));;
+            label{
+                font-weight: 500; 
+                margin-top: .5em;
+                color: var(--primary-color);
+              }
+              input{
+                  width:22em;
+                  background-color: #ffffff31;
+                  height: 3em;
+                  padding-top: .5em;
+                  margin-top: .5em;
+                  border: 1px solid var(--primary-color);
+                  border-radius: 5px;
+                  color: #fff;
+              }
+              .file{
+                width:22.3em;
+                padding: 1em;
+                border: 1px solid var(--primary-color);
+                height:4em;
+                font-size: 80%;
+              }
+              ::file-selector-button {
+                background-color:var(--primary-color);
+                color: white;
+                border: 1px solid var(--primary-color);
+                border-radius: 5px;
+                padding: .4rem 1rem;
+              }
+              textarea{
+                border: 1px solid var(--primary-color);
+                background-color: #ffffff49;
+                width: 22em;
+                margin-top: .5em;
+                  border-radius: 5px;
+                  color: #fff;
+              }
+          }
+     
+            .add{
+                margin-top: 2.5em;
+                width: 100%;
+                font-size: 25px;
+                padding: .5em 0 0.5em 0;
+                display: flex;
+                justify-content: center;
+                svg{
+                    padding-left: 5px;
+                    font-size: 25px;
+                }
+            }        
+    }
+    }
 }
