--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -880,13 +880,12 @@ form{
             .add{
                 margin-top: 2em;
                 width: 100%;
+                height: 2em;
                 font-size: 18px;
-                padding: .5em 0 0.5em 0;
-                display: flex;
-                justify-content: center;
+                padding-top: .5em;
                 svg{
                     padding-left: 5px;
-                    font-size: 18px;
+                    font-size: 20px;
                 }
             }        
     }
