--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -949,6 +949,7 @@ img {
 }
 .addrecipe form .add {
   margin-top: 2.5em;
+  padding-top: 5em;
   width: 100%;
   font-size: 25px;
   padding: 0.5em 0 0.5em 0;
