--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -231,6 +231,7 @@ img{
      
             .add{
                 margin-top: 2.5em;
+                padding-top: 5em;
                 width: 100%;
                 font-size: 25px;
                 padding: .5em 0 0.5em 0;
