--- a/src/styles/partials/_recipe-details.scss
+++ b/src/styles/partials/_recipe-details.scss
@@ -15,13 +15,11 @@
     }
     .recipe-name{
         padding-right: 15em;
-        display: flex;
         flex-grow: 1;
         flex-basis: 200;
-       justify-content: end;
-       font-size: 30px;
-       color: #0A0A0A;
-       font-weight: 700;
+        font-size: 30px;
+        color: #0A0A0A; 
+        font-weight: 700;
     }
     .recipe-image{
         img{
@@ -48,6 +46,7 @@
     padding: 10px;
     justify-content: space-evenly;
     .ingredients{
+
         span{
             background-color: var(--primary-color);
             color: #ffffff;
@@ -59,6 +58,7 @@
                 margin-top: 2em;
                 list-style-type: none;
                 color: var(--text-color);
+                margin-bottom: 2em;
                 .fa{
                     margin-right: 10px;
                     color: var(--primary-color);
@@ -67,6 +67,7 @@
     }
     .Instructions{
         span{
+            margin-top: 3em;
             background-color: var(--primary-color);
             color: #ffffff;
             padding: 6px;
@@ -79,7 +80,14 @@
                
           }
     }
-   
+   .createdby{
+    display: flex;
+    flex-wrap: wrap;
+    flex-direction: column;
+    justify-content: end;
+    margin-top: 2em;
+    margin-left: 35em;
+   }
     
   }
  
